# ouroboros

./: .gitignore  AUTONOMOUS_MODE.md  AUTO_GIT_PUSH.md  COMMENT_BASED_UPGRADES.md  COMPLETE_AUTONOMY.md  FIRST_RUN.md  HOT_RELOAD.md  RASPBERRY_PI_DEPLOYMENT.md  README.md  TELEGRAM_NOTIFICATIONS.md  WHAT_HAPPENS_NOW.md  pyproject.toml
.claude/: settings.local.json
config/: agent.json  state.json
docs/: architecture.md  moltbook-agent.md  spec.md
src/ouroboros/: __main__.py  cli.py  codebase.py  community_improvement.py  config.py  evaluation.py  git_ops.py  improvement.py  knowledge_base.py  llm.py  moltbook.py  policies.py  prompts.py  self_improve.py  self_modify.py  self_question.py  test_runner.py
systemd/: ouroboros.service
tests/: test_codebase.py  test_community_improvement.py  test_evaluation.py  test_feed_intelligence.py  test_git_ops.py  test_improvement.py  test_llm.py  test_moltbook.py  test_policies.py  test_self_question.py  test_test_runner.py
